--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
-  "homepage": "https://disha295.github.io/Portfolio/",
+  "homepage": "https://disha295.github.io/Portfolio",
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@studio-freight/lenis": "^1.0.42",
